--- a/MediaPlayerMidterm/MediaPlayerMidterm/Site.Master
+++ b/MediaPlayerMidterm/MediaPlayerMidterm/Site.Master
@@ -2,11 +2,7 @@
 
 
 <!DOCTYPE HTML>
-<!--
-	Visualize by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
+
 <html>
 <head>
     <title>Visualize by TEMPLATED</title>
@@ -18,82 +14,33 @@
 <body>
 
     <!-- Wrapper -->
-    <div id="wrapper">
+    <div id="wrappermaster">
 
         <!-- Header -->
-        <header id="header">
+        <header id="headermaster">
             <span class="avatar">
                 <img src="images/logo.jpg" alt="" /></span>
-
-            <h1>This is a <strong>Media Player</strong>, it should be right here <a href="http://templated.co">...seriously</a><br />
-            </h1>
-
+           
             <asp:ContentPlaceHolder ID="HeadContent" runat="server">
             </asp:ContentPlaceHolder>
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
-
-            <%--            <ul class="icons">
-                <li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-                <li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-            </ul>--%>
         </header>
 
 
         <!-- Main -->
         <section id="main">
-
-            <%-- <!-- Thumbnails -->
-            <section class="thumbnails">
-                <div>
-                    <a href="images/fulls/01.jpg">
-                        <img src="images/thumbs/01.jpg" alt="" />
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                    </a>
-                    <a href="images/fulls/02.jpg">
-                        <img src="images/thumbs/02.jpg" alt="" />
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                    </a>
-                </div>
-                <div>
-                    <a href="images/fulls/03.jpg">
-                        <img src="images/thumbs/03.jpg" alt="" />
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                    </a>
-                    <a href="images/fulls/04.jpg">
-                        <img src="images/thumbs/04.jpg" alt="" />
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                    </a>
-                    <a href="images/fulls/05.jpg">
-                        <img src="images/thumbs/05.jpg" alt="" />
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                    </a>
-                </div>
-                <div>
-                    <a href="images/fulls/06.jpg">
-                        <img src="images/thumbs/06.jpg" alt="" />
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                    </a>
-                    <a href="images/fulls/07.jpg">
-                        <img src="images/thumbs/07.jpg" alt="" />
-                        <h3>Lorem ipsum dolor sit amet</h3>
-                    </a>
-                </div>
-            </section>--%>
         </section>
 
         <!-- Footer -->
-        <footer id="footer">
+        <footer id="footermaster">
             <p>&copy; Untitled. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Demo Images: <a href="http://unsplash.com">Unsplash</a>.</p>
         </footer>
 
     </div>
 
     <!-- Scripts -->
- <%--   <script src="assets/js/jquery.min.js"></script>
+    <%--   <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.poptrox.min.js"></script>--%>
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/main.js"></script>
