--- a/MediaPlayerMidterm/MediaPlayerMidterm/assets/css/main.css
+++ b/MediaPlayerMidterm/MediaPlayerMidterm/assets/css/main.css
@@ -1654,21 +1654,20 @@
 	input[type="tel"],
 	select,
 	textarea {
-		-moz-appearance: none;
+		border-style: none;
+    border-color: inherit;
+    border-width: medium;
+    -moz-appearance: none;
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: rgba(255, 255, 255, 0.075);
 		border-radius: 4px;
-		border: none;
-		border: solid 1px rgba(255, 255, 255, 0.25);
 		color: inherit;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
 		text-decoration: none;
-		width: 100%;
-	}
+		}
 
 		input[type="text"]:invalid,
 		input[type="password"]:invalid,
@@ -1726,8 +1725,8 @@
 	input[type="password"],
 	input[type="email"],
 	select {
-		height: 2.75em;
-	}
+		margin-left: 91px;
+}
 
 	textarea {
 		padding: 0.75em 1em;
